@@ -1,3 +1,5 @@
+HEAD
+	+ Added JS function Zentyal.escapeHTTPQuery
 4.1.2
 	+ New commercial edition
 4.1.1
